Migrated to java 1.8